# dagens-public

./: .env.example  .gitignore  ARCHITECTURE.md  BACKPRESSURE.md  CONTROL_PLANE_HA.md  DEPLOYMENT_PATTERNS.md  Dockerfile  Dockerfile.api  Dockerfile.worker  GETTING_STARTED.md  INFRASTRUCTURE_THESIS.md  KUBERNETES_VS_DAGENS.md  Makefile  README.md  REPO_TREE_AND_RUNTIME.md  STATE_MACHINE.md  TESTING.md  docker-compose.yml  execution-model.md  go.mod  go.sum
.github/workflows/: ci.yml  godoc.yml  load-test.yml  tests-e2e.yml
cmd/agent-server/: main.go
cmd/api_server/: hitl_callback.go  hitl_callback_test.go  hitl_drill.go  main.go  main_test.go
cmd/loadtest/: main.go
cmd/replay_recovery_benchmark/: main.go
cmd/scheduler_scale_profile/: main.go  main_test.go
cmd/state-persist-demo/: main.go
cmd/state-watch-demo/: main.go
cmd/transition_archive_export/: main.go  main_integration_test.go  main_test.go
cmd/transition_archive_prune/: main.go
docs/: BACKPRESSURE.md  CONTROL_PLANE_HA.md  DISCIPLINE.md  DURABILITY.md  FAILURE_SEMANTICS.md  GETTING_STARTED.md  JAEGER_INTEGRATION.md  LAUNCH.md  LOAD_TESTING.md  MIXED_VERSION_VALIDATION_PLAN.md  PHILOSOPHY.md  POSTGRES_TRANSITION_QUICKSTART.md  PUBLIC_REPO_COPY_PLAN.md  PUBLIC_REPO_FILE_MANIFEST.md  RECOVERY_RUNBOOK.md  RELEASE_v0.1.0.md  REPO_TREE_AND_RUNTIME.md  SCALING_AND_DISPATCH_CLARIFICATION.md  STATE_MACHINE.md
examples/: README.md  advanced_distributed_demo.py  advanced_features.py  crewai_integration_example.py  crewai_integration_simple_example.py  hierarchical_agents.py  langgraph_integration_example.py  langgraph_integration_simple_example.py  multi_node_deployment.md  phase2_features.py  phase3_features.py  pyspark_agent_example.py  simple_agent.py
pkg/a2a/: sse.go  (+7 more)
scripts/: backpressure_failover_drill.sh  build_mixed_version_images.sh  chaos_load_suite.sh  failback_chaos_drill.sh  failover_drill.sh  hitl_failover_drill.sh  mixed_version_validation.sh  repeat_failover_drill.sh
sdk/python/: pyproject.toml
sdk/python/dagens/: __init__.py  client.py  graph.py
sdk/python/dagens_a2a/: README.md  pyproject.toml
sdk/python/dagens_a2a/examples/crewai_research/: agent.py
sdk/python/dagens_a2a/src/dagens_a2a/: __init__.py  adapter.py  cli.py  health.py  protocol.py  server.py
sdk/python/dagens_a2a/src/dagens_a2a/adapters/: __init__.py  crewai.py  langgraph.py
sdk/python/examples/: demo_full.py  remote_test.py  show_results.py
(+672 files in other folders)
